--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </main>
     <section class="portfolio-block website gradient">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row d-inline-flex justify-content-center align-items-center">
                 <div class="col-md-12 col-lg-5 offset-lg-1 text">
                     <h3>Contact Me For More Info on Pricing &amp; Projects</h3>
                     <p>I would love to speak with you more about your specifc needs. Please feel free to contact me and we can discuss pricing to suit your budget as well what I can do to make your project picture perfect.&nbsp;</p>
