--- a/projects-grid-cards.html
+++ b/projects-grid-cards.html
@@ -36,14 +36,14 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://jkane88.github.io/GifTastic/"><img src="assets/img/gif.jpeg" alt="Card Image" class="card-img-top scale-on-hover"></a>
+                        <div class="card border-0"><a href="https://jkane88.github.io/GifTastic/"><img src="assets/img/gif-y.png" alt="Card Image" class="card-img-top scale-on-hover"></a>
                             <div class="card-body">
                                 <h6><a href="#">Gif Tastic</a></h6>
                                 <p class="text-muted card-text">Gif search and display using the GIPHY API.&nbsp;</p><a class="card-link" href="#"></a></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://jkane88.github.io/train-time/"><img src="assets/img/traintime.jpeg" alt="Card Image" class="card-img-top scale-on-hover"></a>
+                        <div class="card border-0"><a href="https://jkane88.github.io/train-time/"><img src="assets/img/train%20new.png" alt="Card Image" class="card-img-top scale-on-hover"></a>
                             <div class="card-body">
                                 <h6><a href="#">Train Scheduler</a></h6>
                                 <p class="text-muted card-text">Persist Data with Firebase.</p>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://jkane88.github.io/TriviaGame/"><img src="assets/img/trivia.jpeg" alt="Card Image" class="card-img-top scale-on-hover"></a>
+                        <div class="card border-0"><a href="https://jkane88.github.io/TriviaGame/"><img src="assets/img/trivia.png" alt="Card Image" class="card-img-top scale-on-hover"></a>
                             <div class="card-body">
                                 <h6><a href="#">Music Trivia&nbsp;</a></h6>
                                 <p class="text-muted card-text">Ranom music question game.&nbsp;</p>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://jkane88.github.io/Word-Guess-Game/"><img src="assets/img/wordguess.jpeg" alt="Card Image" class="card-img-top scale-on-hover"></a>
+                        <div class="card border-0"><a href="https://jkane88.github.io/Word-Guess-Game/"><img src="assets/img/wordguess.png" alt="Card Image" class="card-img-top scale-on-hover"></a>
                             <div class="card-body">
                                 <h6><a href="#">Word Guess Game&nbsp;</a></h6>
                                 <p class="text-muted card-text">Try to guess the name of a few LoFi producers. Formatted like Hangman.</p>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://jkane88.github.io/unit-4-game/"><img src="assets/img/rpg.jpeg" alt="Card Image" class="card-img-top scale-on-hover"></a>
+                        <div class="card border-0"><a href="https://jkane88.github.io/unit-4-game/"><img src="assets/img/rpg.png" alt="Card Image" class="card-img-top scale-on-hover"></a>
                             <div class="card-body">
                                 <h6><a href="#">RPG Game</a></h6>
                                 <p class="text-muted card-text">Pick a character and try to defeat all the other characters.</p>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://jkane88.github.io/project1/"><img src="assets/img/project.jpeg" alt="Card Image" class="card-img-top scale-on-hover"></a>
+                        <div class="card border-0"><a href="https://jkane88.github.io/project1/"><img src="assets/img/project.png" alt="Card Image" class="card-img-top scale-on-hover"></a>
                             <div class="card-body">
                                 <h6><a href="#">ISS Tracker</a></h6>
                                 <p class="text-muted card-text">Track the ISS in near real time as well other informtaion relevant to the ISS.</p>
