--- a/projects-grid-cards.html
+++ b/projects-grid-cards.html
@@ -82,6 +82,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card border-0"><a href="https://shiftchange-mgjje.herokuapp.com/"><img src="assets/img/shiftChange.png" alt="Card Image" class="card-img-top scale-on-hover"></a>
+                            <div class="card-body">
+                                <h6><a href="#">Shift Change </a></h6>
+                                <p class="text-muted card-text">This was a group project. App for scheduling/switching shifts in the work place.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
